# baza

./: .gitignore  Baza.tape  Baza.toml  CHANGELOG.md  Caddyfile  Cargo.toml  Cross.toml  Dockerfile  GEMINI.md  README.md  Trunk.toml  baza.dev.toml  cliff.toml  compose.yaml  entrypoint.sh  example.txt.gpg  public_key.asc
.cargo/: config.toml
.github/workflows/: deploy.yaml  docker.yaml  publish.yaml  release.yaml  release.yml  rust.yaml  rust.yml
contrib/: pass-to-baza.sh
contrib/ci/: ubuntu-install-packages  x86_64-unknown-linux-musl.sh
crates/baza/: Cargo.toml
crates/baza-core/: Cargo.toml
crates/baza-core/src/: box.rs  bundle.rs  container.rs  dump.rs  error.rs  lib.rs  pgp.rs  prelude.rs  s3.rs  storage.rs  sync.rs  totp.rs  utils.rs
crates/baza-core/src/storage/: gitfs.rs  gix.rs  redb.rs  web.rs
crates/baza-web/: Cargo.toml  index.html
crates/baza-web/public/: style.css
crates/baza-web/src/: lib.rs  main.rs
crates/baza/src/: bundle.rs  main.rs  password.rs
doc/: conventions.md  idea.md  tasklist.md  vision.md  workflow.md
pkg/brew/: baza-bin.rb
src/baza/: Cargo.toml
src/baza/src/: bundle.rs  main.rs  password.rs
src/cli/: Cargo.toml
src/cli/examples/: AES-256-GCM.rs  gpg.rs  mvp_2.rs
src/cli/src/: bundle.rs  main.rs  password.rs  storage.rs
src/core/: Baza.toml  Cargo.toml
src/core/examples/: AES-256-GCM.rs  from_git.rs  gpg.rs
src/core/src/: box.rs  bundle.rs  container.rs  error.rs  git.rs  lib.rs  pgp.rs  storage.rs
src/core/src/storage/: git.rs  gitfs.rs  gix.rs  sled.rs
