[workspace]
resolver = "2"
members = ["crates/*"]
default-members = ["crates/baza"]

[workspace.package]
version = "3.2.1"
edition = "2021"
authors = ["Andrey Semenov <i@itmage.ru>"]
license = "Apache-2.0"
description = "The base password manager"

[workspace.dependencies]
baza_core = { path = "crates/baza-core" }
thiserror = "2.0.18"
tracing = "0.1.44"
log = "0.4"
simple_logger = "5.2.0"
walkdir = "2.5.0"
exn = "0.3.1"
toml = "1.1.2"
serde = "1.0.228"
tempfile = "3.27.0"
rand = "0.10.1"
getrandom = { version = "0.4.3", features = ["wasm_js"] }
aes = "0.9.1"
aes-gcm = { version = "0.10.3", features = ["std"] }
uuid = { version = "1.23.4", features = ["v4", "js"] }
colored = "3.1.1"
sha2 = "0.11.0"
arboard = { version = "3.6.1", default-features = false }
argh = "0.1.19"
regex-lite = "0.1.9"
pollster = "0.4.0"
redb = "4.1.0"
totp-rs = { version = "5.7", default-features = false, features = ["gen_secret", "otpauth", "qr"] }
rust-s3 = { version = "0.37.2", default-features = false, features = ["sync", "sync-rustls-tls"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
