[package]
name = "baza_core"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
description = { workspace = true }

[lib]
path = "src/lib.rs"

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
walkdir = { workspace = true }
anyhow = { workspace = true }
sequoia-openpgp = { workspace = true }
toml = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tempfile = { workspace = true }
rand = { workspace = true }
aes = { workspace = true }
aes-gcm = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
colored = { workspace = true }
sha2 = { workspace = true }
arboard = { workspace = true }
git2 = { workspace = true }
regex = { workspace = true }
gix = { workspace = true }
