[package]
name = "baza_core"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
description = { workspace = true }

[lib]
path = "src/lib.rs"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
walkdir = { workspace = true }
tempfile = { workspace = true }
colored = { workspace = true }
arboard = { workspace = true }
redb.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom_02 = { package = "getrandom", version = "0.2.17", features = ["js"] }
rexie = "0.6.2"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
  "Window",
  "Navigator",
  "Clipboard",
  "console",
] }

[dependencies]
async-trait = "0.1.86"
pollster = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
exn = { workspace = true }
toml = { workspace = true }
serde = { workspace = true, features = ["derive"] }
rand = { workspace = true }
getrandom = { workspace = true }
aes = { workspace = true }
aes-gcm = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
sha2 = { workspace = true }
regex-lite = { workspace = true }
postcard = { version = "1.1", features = ["use-std"] }
crc32fast = "1.3"

# Compression libraries - optional, enabled via features
lz4_flex = { version = "0.9", optional = true }
flate2 = { version = "1.1", optional = true, features = ["miniz_oxide"] }
zstd = { version = "0.11", optional = true }

[features]
# Default to lz4 for general use; gate heavier algos behind features
default = ["lz4"]
lz4 = ["dep:lz4_flex"]
flate = ["dep:flate2"]
zstd = ["dep:zstd"]
