[package]
name = "baza-web"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.7.0", features = ["csr"] }
console_error_panic_hook = "0.1"
baza_core = { path = "../baza-core" }
tracing = { workspace = true }
tracing-subscriber = "0.3"
tracing-wasm = "0.2"
uuid = { version = "1.8", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
  "Clipboard",
  "Navigator",
  "Window",
  "HtmlTextAreaElement",
  "Document",
  "Node",
  "Element",
  "HtmlElement",
  "HtmlDocument",
  "HtmlInputElement",
  "File",
  "FileList",
] }
gloo-timers = { version = "0.3", features = ["futures"] }
serde_json = "1.0.149"
js-sys = "0.3.85"
