[package]
name = "baza"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
description = { workspace = true }
readme = "../../README.md"

[[bin]]
name = "baza"
path = "src/main.rs"

[dependencies]
log = { workspace = true }
argh = { workspace = true }
simple_logger = { workspace = true }
baza_core = { workspace = true }
pollster = { workspace = true }
tracing = { workspace = true }
toml = { workspace = true }
exn.workspace = true
