[package]
name = "baza"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
description = { workspace = true }
readme = "../../README.md"

[[bin]]
name = "baza"
path = "src/main.rs"

[dependencies]
log = { workspace = true }
argh = { workspace = true }
simple_logger = { workspace = true }
baza_core = { workspace = true }
pollster = { workspace = true }
tracing = { workspace = true }
toml = { workspace = true }
exn.workspace = true
qrcode = { version = "0.14.1", default-features = false }

[features]
default = []
s3 = ["baza_core/s3"]
