[package]
name = "cli"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[[bin]]
name = "baza"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
core = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
tracing = { workspace = true }
sequoia-openpgp = { workspace = true }
aes = "0.8.4"
rand = "0.8.5"
aes-gcm = "0.10.3"
