[package]
name = "cli"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[[bin]]
name = "baza"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
baza_core = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
tracing = { workspace = true }
sequoia-openpgp = { workspace = true }
toml = { workspace = true }
