[package]
name = "baza_cli"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[[bin]]
name = "baza"
path = "src/main.rs"

[dependencies]
clap = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
baza_core = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
tracing = { workspace = true }
sequoia-openpgp = { workspace = true }
toml = { workspace = true }
