[package]
name = "core"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[lib]
path = "src/lib.rs"

[dependencies]
rand = "0.8.5"
tempfile = "3.14.0"
thiserror = { workspace = true }
tracing = { workspace = true }
walkdir = { workspace = true }
anyhow = { workspace = true }
sequoia-openpgp = { workspace = true }
